--- a/main.html
+++ b/main.html
@@ -7,8 +7,66 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
+    <table border="1" style="width: 100%; height: 100%">
+		<tr>
+			<td>
+				<table border="1" style ="width:100%"><br><br><br>
+					<tr>
+						<th colspan="2">Nested Table 2</th>
+					</tr>
+					<tr>
+						<th>Column 1</th>
+						<th>Column 2</th>
+					</tr>
+					<tr>
+						<td>abc</td>
+						<td>def</td>
+					</tr>
+				</table><br><br><br>
+			</td>
+			<td>
+				<table border="1" style ="width:100%"><br><br>
+					<tr>
+						<th>Nested table 1</th>
+					</tr>
+					<tr>
+						<td>
+							<ul>
+								<li>List item</li>
+								<li>List item</li>
+								<li>List item</li>
+							</ul>
+						</td>
+					</tr>
+				</table><br><br>
+			</td>
+		</tr><br><br>
+		<tr>
+			<td>
+				<table border="1" style ="width:100%"><br>
+					<tr>
+						<th colspan="2">Nested Table 3</th>
+					</tr>
+					<tr>
+						<td><a href="#">Nested Table</a></td>
+						<td>Demo Continued</td>
+					</tr>
+				</table>
+			</td>
+			<td>
+				<table border="1" style ="width:100%"><br>
+					<tr>
+						<th>Nested Table 4</th>
+					</tr>
+					<tr>
+						<th style="background-color:black; color:white">HTML</th>
+					</tr>
+					
+				</table>
+			</td>
+		</tr>
+		
+      
     </table>
   </body>
 </html>
