--- a/main.html
+++ b/main.html
@@ -9,10 +9,10 @@
   <body>
     <table border="1" style="width: 100%; height: 100%">
 		<tr>
-			<td>
-				<table border="1" style ="width:100%"><br><br><br>
+			<td><br><br><br>
+				<table border="1" style ="width:100%">
 					<tr>
-						<th colspan="2">Nested Table 2</th>
+						<th colspan="2">Nested Table 1</th>
 					</tr>
 					<tr>
 						<th>Column 1</th>
@@ -24,17 +24,17 @@
 					</tr>
 				</table><br><br><br>
 			</td>
-			<td>
-				<table border="1" style ="width:100%"><br><br>
+			<td><br><br>
+				<table border="1" style ="width:100%">
 					<tr>
-						<th>Nested table 1</th>
+						<th>Nested table 2</th>
 					</tr>
 					<tr>
 						<td>
 							<ul>
-								<li>List item</li>
-								<li>List item</li>
-								<li>List item</li>
+								<li>List item 1</li>
+								<li>List item 2</li>
+								<li>List item 3</li>
 							</ul>
 						</td>
 					</tr>
@@ -42,8 +42,8 @@
 			</td>
 		</tr><br><br>
 		<tr>
-			<td>
-				<table border="1" style ="width:100%"><br>
+			<td><br>
+				<table border="1" style ="width:100%">
 					<tr>
 						<th colspan="2">Nested Table 3</th>
 					</tr>
@@ -53,13 +53,13 @@
 					</tr>
 				</table>
 			</td>
-			<td>
-				<table border="1" style ="width:100%"><br>
+			<td><br>
+				<table border="1" style ="width:100%">
 					<tr>
 						<th>Nested Table 4</th>
 					</tr>
 					<tr>
-						<th style="background-color:black; color:white">HTML</th>
+						<td style="background-color:black; color:white"> HTML </td>
 					</tr>
 					
 				</table>
