--- a/main.html
+++ b/main.html
@@ -1,75 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table</title>
-   
-  </head>
-  <body>
-    <table border="1" style="width: 100% height=: 100%">
-		<tr>
-			<td>
-				<table border="1" style="width:100%">
-					<tr>
-						<th colspan="2">Nested Table 1</th>
-					</tr>
-					<tr>
-						<th>Column 1</th>
-						<th>column 2</th>
-					</tr>
-					<tr>
-						<td style="text-align:center;">abc</td>
-						<td style="text-align:center;">def</td>
-					</tr>
-				</table>
-			</td>
-			<td>
-			<table border="1" style="width:100%"><br><br>
-				<tr>
-					<th colspan="2">Nested Table 2</th>
-				</tr>
-				<tr>
-					<th>Column 1</th>
-					<th>Column 2</th>
-				</tr>
-				<tr>
-					<td colspan="2">
-						<ul>
-							<li>List item 1</li>
-							<li>List item 2</li>
-							<li>List item 3</li>
-						</ul>
-					</td>
-				</tr>
-			</table><br><br>
-		</td>
-		</tr>
-		
-		<tr>
-			<td>
-				<table border="1" style="width:100%"><br>
-					<tr>
-						<th colspan="2">Nested Table 3</th>
-					</tr>
-					<tr>
-						<td><a href="#">Nested Table</a></td>
-						<td>Demo continued</td>
-					</tr>
-					
-				</table><br>
-			</td>
-			<td>
-				<table border="1" style="width:100%">
-					<tr>
-						<th>Nested Table 4</th>
-					</tr>
-					<tr>
-						<td style="background-color:black; color:white; text-align:center;"">HTML</td>
-					</tr>
-				</table>
-			</td>
-		</tr>
-	</table>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Table</title>
+</head>
+<body>
+  <table border="1" style="width:100%; height:100%;">
+    <tr>
+      <td>
+        <table border="1" style="width:100%">
+          <tr>
+            <th colspan="2">Nested Table 1</th>
+          </tr>
+          <tr>
+            <th>Column 1</th>
+            <th>Column 2</th>
+          </tr>
+          <tr>
+            <td style="text-align:center;">abc</td>
+            <td style="text-align:center;">def</td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <table border="1" style="width:100%">
+          <tr>
+            <th colspan="2">Nested Table 2</th>
+          </tr>
+          <tr>
+            <th>Column 1</th>
+            <th>Column 2</th>
+          </tr>
+          <tr>
+            <td colspan="2">
+              <ul>
+                <li>List item 1</li>
+                <li>List item 2</li>
+                <li>List item 3</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <table border="1" style="width:100%">
+          <tr>
+            <th colspan="2">Nested Table 3</th>
+          </tr>
+          <tr>
+            <td><a href="#">Nested Table</a></td>
+            <td>Demo Continued</td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <table border="1" style="width:100%">
+          <tr>
+            <th>Nested Table 4</th>
+          </tr>
+          <tr>
+            <td style="background-color:black; color:white; text-align:center;">HTML</td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+</body>
 </html>
