--- a/main.html
+++ b/main.html
@@ -26,14 +26,12 @@
       <td>
         <table border="1" style="width:100%">
           <tr>
-            <th colspan="2">Nested Table 2</th>
-          </tr>
-          <tr>
+            <th>Nested Table 2</th>
             <th>Column 1</th>
             <th>Column 2</th>
           </tr>
           <tr>
-            <td colspan="2">
+            <td colspan="3">
               <ul>
                 <li>List item 1</li>
                 <li>List item 2</li>
